Use vertx instead of Jakarta HttpServlet